--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TTB_Store",
+  "name": "ttb_store",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
+    "sass": "^1.70.0",
     "object-assign": "^4.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier-eslint-cli": "^5.0.0",
